[package]
name = "moan"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
anyhow = "1.0.56"
derive-new = "0.5.9"
derive_more = "0.99.17"
maplit = "1.0.2"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.3.0"
